@@ -1,3 +1,9 @@
+2006-04-20  Murray Cumming  <murrayc@murrayc.com>
+
+	* cairomm/context.cc:
+	* cairomm/context.h: mask(pattern) and mask(surface): Make the parameter 
+	const, because I am fairly sure that the C function does not change it.
+
 2006-04-06  Jonathon Jongsma  <jonathon.jongsma@gmail.com>
 
 	* Makefile.am: Add a brief description of cairomm to the release
